--- a/assets/email.html
+++ b/assets/email.html
@@ -16,7 +16,7 @@
         }
 
         .container {
-            max-width: 650px;
+            max-width: 650px; /* Fixed width for desktop screens */
             margin: 20px auto;
             padding: 20px;
             background-color: white;
@@ -31,6 +31,7 @@
 
         p {
             margin-bottom: 15px;
+            font-size: 18px; /* Adjusted font size for <p> tags */
             color: black;
         }
 
@@ -47,15 +48,14 @@
         }
 
         ul {
-            /* list-style-type: disc !important; */
-            padding: 0;
+            padding: 2%;
             text-align: left;
             color: black;
+            font-size: 16px;
         }
 
         li {
             margin-bottom: 8px;
-            /* list-style-type: disc !important; */
             display: flex;
             align-items: center;
         }
@@ -91,41 +91,48 @@
         }
 
         blockquote {
-            margin-left: 35%;
-            width: 30%; 
-            
+            margin-left: 20%;
+            width: 60%;
         }
 
         blockquote p {
-        padding: 15px;
-        background: rgb(255, 225, 188);
-        border-radius: 5px;
+            padding: 15px;
+            background: rgb(255, 225, 188);
+            border-radius: 5px;
         }
 
         blockquote p::before {
-        content: '\201C';
+            content: '\201C';
         }
 
         blockquote p::after {
-        content: '\201D';
+            content: '\201D';
         }
 
         /* Responsive Styles */
         @media only screen and (max-width: 600px) {
             .container {
                 padding: 10px;
+                border-radius: 10px; /* Remove border radius for full-width */
+                width: 80%; 
+                margin: 2% 8%;
+            }  
+
+            .container h2{
+                font-size: 15px;
+            }
+            .container p{
+                font-size: 13px;
             }
 
-            h2 {
-                font-size: 24px;
+            .container ul {
+                padding-left: 10px;
+                font-size: 12px; 
             }
 
-            p {
-                font-size: 16px;
-            }
-
-            ul {
-                padding-left: 20px;
+            blockquote {
+                margin-left: 25%;
+                width: 50%;
             }
         }
 
@@ -158,19 +165,19 @@
         <p>“<span class="glass">The line graph displays the recycling trends</span> of a <span class="aluminim">select few materials</span> <span class="paper">over the span of almost 3 decades from 1982 to 2010 </span>  <span class="plastics"> in a specific region. </span>”</p>
         <p class="tip-day">A breakdown:</p>
         <ul>
-            <li>“This graph shows the proportions of” —> “ <span class="glass"> The line graph displays the recycling trends of </span>”</li>
-            <li>“four different materials” —> “ <span class="aluminim">a select few materials </span> ”</li>
-            <li>“from 1982 to 2010” —> ” <span class="paper"> "over the span of almost 3 decades from 1982 to 2010 </span>”</li>
-            <li>“in a particular country” —> “ <span class="plastics"> in a specific region </span>”</li>
+            <li>“This graph shows the proportions of” —> <span class="glass"> The line graph displays the recycling trends of </span></li>
+            <li>“four different materials” —> <span class="aluminim">a select few materials </span></li>
+            <li>“from 1982 to 2010” —> <span class="paper"> "over the span of almost 3 decades from 1982 to 2010 </span></li>
+            <li>“in a particular country” —> <span class="plastics"> in a specific region </span></li>
         </ul>
         <p>Now that we understand the task, let's write the introduction.</p>
         <p class="mini-heading">Writing the Introduction!</p>
         <p>The purpose of an introduction is to provide the examiner with a clear overview of your upcoming writing.</p>
         <ul>
-            <li>Rephrase the question in your own words.</li>
-            <li>Explain the visual diagram's nature, data source, and collection timeframe.</li>
-            <li>For two diagrams, give a brief introduction for each.</li>
-            <li>Aim for concise and effective communication.</li>
+            <li>1. Rephrase the question in your own words.</li>
+            <li>2. Explain the visual diagram's nature, data source, and collection timeframe.</li>
+            <li>3. For two diagrams, give a brief introduction for each.</li>
+            <li>4. Aim for concise and effective communication.</li>
         </ul>
         <p class="mini-heading">Remember</p>
         <blockquote>
