--- a/assets/email.html
+++ b/assets/email.html
@@ -11,7 +11,8 @@
             margin: 0;
             padding: 0;
             background-color: rgb(255, 225, 188);
-            color: rgb(221, 114, 5);
+            color: rgb(221, 114, 5); 
+            font-family: sans-serif;
         }
 
         .container {
@@ -50,7 +51,7 @@
             padding: 2%;
             text-align: left;
             color: black;
-            font-size: 16px; 
+            font-size: 18px; 
         }
 
         li {
@@ -113,8 +114,8 @@
             border-collapse: collapse;
             border: 2px solid rgb(0, 0, 0);
             letter-spacing: 1px;
-            font-family: sans-serif;
-            font-size: 0.8rem;
+            /* font-family: sans-serif; */
+            font-size: 16px;
         }
 
         td,
@@ -170,8 +171,12 @@
 
             .container ul {
                 padding-left: 10px;
-                /* font-size: 12px;  */
+                font-size: 12px; 
                 list-style-type: disc;
+            } 
+
+            table{
+                font-size: 14px;
             }
 
             blockquote {
@@ -198,54 +203,53 @@
 
 <body>
     <div class="container">
-        <h2>Let's build on that Task 1 we sent you days back.</h2>
-        <p>So, we were given a line graph and were required to summarise the main points and make relevant comparisons. Let's continue writing our essay.</p>
-
-        <p class="mini-heading">Tip of the Day <span class="tip-day">Plan Your Essay</span></p>
+        <h2>Writing the Key Features of our Essay .</h2>
+        <p>So, now that we have an introduction, lets write the body of the essay.</p>
         <img src="../assets/Task_1_Line_Graph.jpg" />
-        <p class="mini-heading">The Overview:</p>
-        <p>The overview in your response should summarise what you see in the visual diagram. It should summarise the main: </p>
+        <p class="mini-heading">Tip of the Day <span class="tip-day">Write you Essay</span></p>
+        <p><em style="color: black;">I mean, what else was I going to do.</em>Alright then, let's put pen to paper. Use proper grammar, vocabulary, and sentence structure. If you're feeling fancy, throw in some linking words and phrases to make your essay look like it was written by a pro.</p>
+        <p class="mini-heading">Writing the Key Features</p> 
+        <p>The next step is to write the body, i.e., about the key features. It is advisable to split the key features into <span style="font-weight: bold;">two main bodies:</span></p>
+        <p><span style="font-weight: bold;">Main Body 1: </span>Present the key features with supporting figures.</p>
+        <p><span style="font-weight: bold;">Main Body 2: </span>Make comparisons if relevant or highlight more key features.</p> 
+        <p style="font-weight: bold;">What to include in main body 1 and 2? </p> 
+        <div><ul>
+            <li>> Supporting data for each element (E.g., age groups, products, years) </li>
+            <li>> Noticeable figures that stand out (E.g., Highs, lows, fluctuation or period of stability) </li>
+            <li>> Figures that have increased or decreased. </li> 
+            <li>> Figures that have not changed at all, that remain the same. </li>
+            <li>> Names of buildings on a map (E.g., Shop, post office, library) </li> 
+            <li>> Roads, pathways, or bridges shown on a map. </li>
+            <li>> Things that have changed within the visual diagram (E.g.location, renovation, removal) </li>
+            <li>> Things that are new (E.g., buildings, roads, facilities) </li>
+            <li>> Each stage in a process </li>
+            <li>> Any extra step that may be part of a process </li>
+            <li>> The materials or equipment used in the process. </li>
+        </ul></div> 
+        <p class="mini-heading">Okay, so how do we put the proceeding to use?  </p> 
+        <p>Regarding this task the key features would be: </p>
+        <p>1. (Identifying the subjects/categories) The names and quantity of the different materials. - Paper & cardboard, glass containers, aluminium cans and plastics </p>
+        <p>2. (Global maximums and minimums) Which is the most recycled material, and the least recycled material? - Paper and cardboard are the most recycled materials, plastics are recycled the least. </p>
+        <p>3. (Looking for the notable trends) Which materials had notable fluctuations? - Aluminium cans had the most notable increase and plastics had the steadiest trend. Paper & cardboard had a high peak then a drop off. </p> 
+        <p style="font-weight: bold;">Main Body 1:</p>
+        <p>In 1982, paper, cardboard and glass containers were the only 2 materials that registered any recycling with rates of about 65 and 50 percent respectively, whereas the recycling of aluminium cans and plastics started at a low rate of less than 5% from the respective years of 1986 and 1990. </p>
+        <p style="font-weight: bold;">Main Body 2:</p>
+        <p>Over the three decades, paper and cardboard remained the most recycled materials with a significant peak of 80% in 1994 before a 10% decrease by 2010, followed by glass containers that saw some fluctuation but eventually reached 60% in the final year evaluated. In contrast, aluminium cans had a substantial and steady uptake in recycling, ultimately reaching a percentage of about 45% in 2010. Finally, plastics had the poorest growth in recycling, reaching a proportion of less than 10% by the end of the twenty-eight years. </p> 
+        <p>We have an introduction and two main body points. Let's put our essay together.</p> 
         <ul>
-            <li>> Trends</li>
-            <li>> Changes</li>
-            <li>> Developments</li> 
-            <li>> Stages</li>
-            <li>> Noticable features</li>
-        </ul>
-        <p class="mini-heading">What you should look out for</p>
-        <table>
-            <thead>
-              <tr>
-                <th>DOs</th>
-                <th scope="col">DON'Ts</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Use cohesive devices to summarise the main features of the task (Overall, In summary) </th>
-                <td>Use specific data and numbers in your overview, this part is only meant to be a summary </td>
-              </tr>
-              <tr>
-                <th scope="row">Identify key trends in the data. Is there an increase, decrease or overall fluctuation in the data? Are there any maximums or minimums? Is the data consistent? </th>
-                <td>Focus on everything in the overview, the overview should only be a summary of the most notable information. </td>
-              </tr>
-            </tbody>
-          </table>
-          <p class="tip-day">Here is our overview: </p>
-          <p class="aluminim"><span class="glass">Overall</span>, paper, cardboard and glass containers were the most recycled materials, <span class="glass"> whereas</span> the rate of aluminium recycling had the most significant increase,<span class="glass"> while </span> plastics saw little to no increase over the given period.  </p> 
-          <ul>
-            <li>> Cohesive devices and linking words (<span class="glass">in red</span>) </li>
-            <li>> Key feature i.e., increases, decreases and fluctuations (<span class="aluminim">in green </span>)</li>
-            <li><a href="https://7esl.com/linking-words/"> <span style="color: black;">> </span>More on Linking words and how to use them</a></li>
-          </ul> 
-          <p>Now we have paraphrased the question and written the overview, let's put them together to form the <span style="font-weight: bold;"> Introduction: </span> </p> 
-
-          <p style="font-weight: bold;"> <em>The line graph displays the recycling trends of a select few materials over the span of almost 3 decades from 1982 to 2010 in a specific region. Overall, paper, cardboard and glass containers were the most recycled materials, whereas the rate of aluminium recycling had the most significant increase, while plastics saw little to no increase in recycling over the given period. </em></p>
-
+            <li>Introduction</li>
+            <li>Main Body 1</li>
+            <li>Main body 2</li>
+        </ul> 
+        <em>
+        <p>The line graph displays the recycling trends of a select few materials over the span of almost 3 decades from 1982 to 2010 in a specific region. Overall, paper, cardboard and glass containers were the most recycled materials, whereas the rate of aluminium recycling had the most significant increase, while plastics saw little to no increase in recycling over the given period. </p>
+        <p>In 1982, paper, cardboard and glass containers were the only 2 materials that registered any recycling with rates of about 65% and 50% respectively, whereas the recycling of aluminium cans and plastics started at a low rate of less than 5% from the respective years of 1986 and 1990.</p> 
+        <p>Over the three decades, paper and cardboard remained the most recycled materials with a significant peak of 80% in 1994 before a 10% decrease by 2010, followed by glass containers that saw some fluctuation but eventually reached 60% in the final year evaluated. In contrast, aluminium cans had a substantial and steady uptake in recycling, ultimately reaching a percentage of about 45% in 2010. Finally, plastics had the poorest growth in recycling, reaching a proportion of less than 10% by the end of the twenty-eight years.</p>
+    </em>
         <p class="mini-heading">Remember</p>
         <blockquote>
-            <p>Planning is the compass that turns dreams into reality, guiding each step with purpose and transforming uncertainty into opportunity</p>
-            <footer style="color: black;">- Mpesh</footer>
+            <p>Writing is the anchor of our thoughts, the vessel of our imagination, and the conduit through which we share the legacy of our minds with the world.</p>
+            <footer style="color: black;">- Homiefromtheculdesac</footer>
         </blockquote>
         <!-- Footer -->
     </div>
