Completed 4th email

--- a/assets/email.html
+++ b/assets/email.html
@@ -180,8 +180,8 @@
             }
 
             blockquote {
-                margin-left: 25%;
-                width: 50%;
+                margin: 0 15%;
+                width: 70%;
             }
         }
 
@@ -203,53 +203,34 @@
 
 <body>
     <div class="container">
-        <h2>Writing the Key Features of our Essay .</h2>
-        <p>So, now that we have an introduction, lets write the body of the essay.</p>
-        <img src="../assets/Task_1_Line_Graph.jpg" />
-        <p class="mini-heading">Tip of the Day <span class="tip-day">Write you Essay</span></p>
-        <p><em style="color: black;">I mean, what else was I going to do.</em>Alright then, let's put pen to paper. Use proper grammar, vocabulary, and sentence structure. If you're feeling fancy, throw in some linking words and phrases to make your essay look like it was written by a pro.</p>
-        <p class="mini-heading">Writing the Key Features</p> 
-        <p>The next step is to write the body, i.e., about the key features. It is advisable to split the key features into <span style="font-weight: bold;">two main bodies:</span></p>
-        <p><span style="font-weight: bold;">Main Body 1: </span>Present the key features with supporting figures.</p>
-        <p><span style="font-weight: bold;">Main Body 2: </span>Make comparisons if relevant or highlight more key features.</p> 
-        <p style="font-weight: bold;">What to include in main body 1 and 2? </p> 
-        <div><ul>
-            <li>> Supporting data for each element (E.g., age groups, products, years) </li>
-            <li>> Noticeable figures that stand out (E.g., Highs, lows, fluctuation or period of stability) </li>
-            <li>> Figures that have increased or decreased. </li> 
-            <li>> Figures that have not changed at all, that remain the same. </li>
-            <li>> Names of buildings on a map (E.g., Shop, post office, library) </li> 
-            <li>> Roads, pathways, or bridges shown on a map. </li>
-            <li>> Things that have changed within the visual diagram (E.g.location, renovation, removal) </li>
-            <li>> Things that are new (E.g., buildings, roads, facilities) </li>
-            <li>> Each stage in a process </li>
-            <li>> Any extra step that may be part of a process </li>
-            <li>> The materials or equipment used in the process. </li>
-        </ul></div> 
-        <p class="mini-heading">Okay, so how do we put the proceeding to use?  </p> 
-        <p>Regarding this task the key features would be: </p>
-        <p>1. (Identifying the subjects/categories) The names and quantity of the different materials. - Paper & cardboard, glass containers, aluminium cans and plastics </p>
-        <p>2. (Global maximums and minimums) Which is the most recycled material, and the least recycled material? - Paper and cardboard are the most recycled materials, plastics are recycled the least. </p>
-        <p>3. (Looking for the notable trends) Which materials had notable fluctuations? - Aluminium cans had the most notable increase and plastics had the steadiest trend. Paper & cardboard had a high peak then a drop off. </p> 
-        <p style="font-weight: bold;">Main Body 1:</p>
-        <p>In 1982, paper, cardboard and glass containers were the only 2 materials that registered any recycling with rates of about 65 and 50 percent respectively, whereas the recycling of aluminium cans and plastics started at a low rate of less than 5% from the respective years of 1986 and 1990. </p>
-        <p style="font-weight: bold;">Main Body 2:</p>
-        <p>Over the three decades, paper and cardboard remained the most recycled materials with a significant peak of 80% in 1994 before a 10% decrease by 2010, followed by glass containers that saw some fluctuation but eventually reached 60% in the final year evaluated. In contrast, aluminium cans had a substantial and steady uptake in recycling, ultimately reaching a percentage of about 45% in 2010. Finally, plastics had the poorest growth in recycling, reaching a proportion of less than 10% by the end of the twenty-eight years. </p> 
-        <p>We have an introduction and two main body points. Let's put our essay together.</p> 
-        <ul>
-            <li>Introduction</li>
-            <li>Main Body 1</li>
-            <li>Main body 2</li>
-        </ul> 
-        <em>
-        <p>The line graph displays the recycling trends of a select few materials over the span of almost 3 decades from 1982 to 2010 in a specific region. Overall, paper, cardboard and glass containers were the most recycled materials, whereas the rate of aluminium recycling had the most significant increase, while plastics saw little to no increase in recycling over the given period. </p>
-        <p>In 1982, paper, cardboard and glass containers were the only 2 materials that registered any recycling with rates of about 65% and 50% respectively, whereas the recycling of aluminium cans and plastics started at a low rate of less than 5% from the respective years of 1986 and 1990.</p> 
-        <p>Over the three decades, paper and cardboard remained the most recycled materials with a significant peak of 80% in 1994 before a 10% decrease by 2010, followed by glass containers that saw some fluctuation but eventually reached 60% in the final year evaluated. In contrast, aluminium cans had a substantial and steady uptake in recycling, ultimately reaching a percentage of about 45% in 2010. Finally, plastics had the poorest growth in recycling, reaching a proportion of less than 10% by the end of the twenty-eight years.</p>
-    </em>
-        <p class="mini-heading">Remember</p>
+        <p class="mini-heading">Tip of the Day <span class="tip-day">Conclude</span></p>
+       <p>You're almost there, but don't celebrate just yet. Check your essay for errors, typos, and other embarrassing stuff. Make sure your essay is organised and easy to follow. If you're feeling brave, ask a friend to read it over and give you some feedback. </p> 
+       <h2>Not so fast… </h2>
+       <p>The steps outlined in the previous emails may be a good summary of what you need to do to achieve a high score in your IELTS writing, but what you need more than that is to see these steps in action. So lets write an essay together using these steps (with a few extra tips and tricks), at the end of this course you should have the necessary knowledge and confidence to write an awesome IELTS Task 1 essay! <a>Insert Link Here</a></p>
+        <p class="mini-heading">What are we dealing with? </p>  
+        <p>You can't go into battle without knowing who your enemy is: </p> 
+        <blockquote>
+            <p>If you know the enemy and know yourself, you need not fear the result of a hundred battles. If you know yourself but not the enemy, for every victory gained you will also suffer a defeat. If you know neither the enemy nor yourself, you will succumb in every battle.</p>
+            <footer style="color: black;">- Sun Tzu, The Art of War</footer>
+        </blockquote> 
+        <p>Let's break down all the different types of graphs, charts, and diagrams you might encounter in IELTS Writing Task 1. From line graphs to process diagrams, we'll cover it all! So, take a deep breath and let's dive in. </p> 
+        <p style="font-weight: bold;">Line Graphs </p> 
+        <p>Line graphs show trends over time. They're like a timeline of data that you can use to compare changes over days, months, or years. </p> 
+        <p style="font-weight: bold;">Bar Charts </p>
+        <p>Bar charts show comparisons between different groups or categories. They can be vertical or horizontal and are like the bar graphs you may have seen in math class (but don't worry, we won't make you do any calculations!). </p>
+        <p style="font-weight: bold;">Pie Charts </p> 
+        <p>Pie charts show the distribution of data as percentages of a whole. They're like a delicious pie that's sliced up into different flavours (except, you know, with data instead of pie). </p>
+        <p style="font-weight: bold;">Tables </p> 
+        <p>Tables present data in rows and columns. They're like a spreadsheet that you can use to organise lots of different types of information, from sales figures to survey results. </p>
+        <p style="font-weight: bold;">Maps </p> 
+        <p>Maps show geographical information, such as population density or land use. They're like a treasure map that leads you to the treasure of data (okay, maybe not that exciting, but still pretty cool!). </p>
+        <p style="font-weight: bold;">Process Diagrams </p> 
+        <p>Process diagrams show a sequence of events or steps. They're like a flowchart that you can use to visualise how something works or how a process can be improved. </p> 
+        <p>Okay, now that you know the enemy, how do you tackle it? Simple, with becausewrite. <a>Insert Link</a></p> 
+        <p class="mini-heading">Remember</p> 
         <blockquote>
             <p>Writing is the anchor of our thoughts, the vessel of our imagination, and the conduit through which we share the legacy of our minds with the world.</p>
-            <footer style="color: black;">- Homiefromtheculdesac</footer>
+            <footer style="color: black;">- Khanya.</footer>
         </blockquote>
         <!-- Footer -->
     </div>
