--- a/assets/email.html
+++ b/assets/email.html
@@ -12,7 +12,7 @@
             padding: 0;
             background-color: rgb(255, 225, 188);
             color: rgb(221, 114, 5); 
-            font-family: sans-serif;
+            font-family: sans-serif; 
         }
 
         .container {
@@ -22,7 +22,7 @@
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            text-align: left;
         } 
 
         h2 {
@@ -203,35 +203,61 @@
 
 <body>
     <div class="container">
-        <p class="mini-heading">Tip of the Day <span class="tip-day">Conclude</span></p>
-       <p>You're almost there, but don't celebrate just yet. Check your essay for errors, typos, and other embarrassing stuff. Make sure your essay is organised and easy to follow. If you're feeling brave, ask a friend to read it over and give you some feedback. </p> 
-       <h2>Not so fast… </h2>
-       <p>The steps outlined in the previous emails may be a good summary of what you need to do to achieve a high score in your IELTS writing, but what you need more than that is to see these steps in action. So lets write an essay together using these steps (with a few extra tips and tricks), at the end of this course you should have the necessary knowledge and confidence to write an awesome IELTS Task 1 essay! <a>Insert Link Here</a></p>
-        <p class="mini-heading">What are we dealing with? </p>  
-        <p>You can't go into battle without knowing who your enemy is: </p> 
-        <blockquote>
-            <p>If you know the enemy and know yourself, you need not fear the result of a hundred battles. If you know yourself but not the enemy, for every victory gained you will also suffer a defeat. If you know neither the enemy nor yourself, you will succumb in every battle.</p>
-            <footer style="color: black;">- Sun Tzu, The Art of War</footer>
-        </blockquote> 
-        <p>Let's break down all the different types of graphs, charts, and diagrams you might encounter in IELTS Writing Task 1. From line graphs to process diagrams, we'll cover it all! So, take a deep breath and let's dive in. </p> 
-        <p style="font-weight: bold;">Line Graphs </p> 
-        <p>Line graphs show trends over time. They're like a timeline of data that you can use to compare changes over days, months, or years. </p> 
-        <p style="font-weight: bold;">Bar Charts </p>
-        <p>Bar charts show comparisons between different groups or categories. They can be vertical or horizontal and are like the bar graphs you may have seen in math class (but don't worry, we won't make you do any calculations!). </p>
-        <p style="font-weight: bold;">Pie Charts </p> 
-        <p>Pie charts show the distribution of data as percentages of a whole. They're like a delicious pie that's sliced up into different flavours (except, you know, with data instead of pie). </p>
-        <p style="font-weight: bold;">Tables </p> 
-        <p>Tables present data in rows and columns. They're like a spreadsheet that you can use to organise lots of different types of information, from sales figures to survey results. </p>
-        <p style="font-weight: bold;">Maps </p> 
-        <p>Maps show geographical information, such as population density or land use. They're like a treasure map that leads you to the treasure of data (okay, maybe not that exciting, but still pretty cool!). </p>
-        <p style="font-weight: bold;">Process Diagrams </p> 
-        <p>Process diagrams show a sequence of events or steps. They're like a flowchart that you can use to visualise how something works or how a process can be improved. </p> 
-        <p>Okay, now that you know the enemy, how do you tackle it? Simple, with becausewrite. <a>Insert Link</a></p> 
-        <p class="mini-heading">Remember</p> 
-        <blockquote>
-            <p>Writing is the anchor of our thoughts, the vessel of our imagination, and the conduit through which we share the legacy of our minds with the world.</p>
-            <footer style="color: black;">- Khanya.</footer>
-        </blockquote>
+       <p>You've got task 1 in the bag. Alright, on to task 2. You're probably feeling overwhelmed. But worry not, in this email we'll provide you with a step-by-step approach to ease your mind. </p> 
+       <p class="mini-heading">What are the next steps?</p>  
+       <p>We'll follow the same procedure as we did for task 1 in the previous emails.></p>
+        <p style="font-weight: bold;">Step 1: Understand the Task</p> 
+        <p>Read the essay question carefully and make sure you understand what is being asked of you. Pay attention to the topic, the task instructions, and the key words used. If you don't understand something, don't just guess! Look up the meaning of words and phrases you don't know. </p> 
+        <p style="font-weight: bold;">Step 2: Plan Your Essay</p> 
+        <p>Now that you know what you're dealing with, it's time to plan your essay. Your essay should have four parts: an introduction, two or three main body paragraphs, and a conclusion. In your intro, provide background information on the topic and state your position. In the body, present your arguments and supporting evidence. </p> 
+        <p style="font-weight: bold;">Step 3: Write Your Essay </p>
+        <p>This is the part where you put pen to paper (or fingers to keyboard). Use proper grammar, vocabulary, and sentence structure. Include a variety of sentence structures to demonstrate your command of the English language. Use linking words and phrases to connect your ideas and make your essay easy to follow. </p>
+        <p style="font-weight: bold;">Step 4: Check Your Essay </p> 
+        <p>You're almost there, but don't celebrate just yet. Check your essay for errors, typos, and other embarrassing stuff. Make sure your essay is organised and easy to follow. If you're feeling brave, ask a friend to read it over and give you some feedback. </p>
+        <h2>Example</h2> 
+        <p style="font-weight: bold;">IELTS Writing Task 2 Question </p> 
+        <p>Some people argue that it is the responsibility of individuals to lead a healthy lifestyle, while others believe that governments should promote healthy lifestyle choices. Discuss both views and give your own opinion.
+        </p> 
+        <p>Write at least 250 words.</p>  
+        <p class="mini-heading">Writing the introduction</p> 
+        <p>The purpose of an introduction is to provide the reader with a clear overview of your upcoming essay.</p> 
+        <ul>
+            <li>> Introduce the topic and provide background information.</li>
+            <li>> State your position on the topic.</li>
+            <li>> Preview your arguments in the body paragraphs.</li>
+            <li>> Aim for concise and effective communication.</li>
+        </ul> 
+        <p style="font-weight: bold;">Remember: This is only an example. Just ensure you keep the points above in mind.</p> 
+        <p><em style="color: black;">In recent years, many people have become more aware of the importance of leading a healthy lifestyle. While some believe that this is a personal responsibility, others argue that governments should be responsible for promoting healthy lifestyle choices. In this essay, I will argue that individuals should take responsibility for their own health. First, I will explore the benefits of personal responsibility. Second, I will examine the limitations of government intervention. Finally, I will offer some practical advice for individuals who want to improve their health.</em></p> 
+        <p class="mini-heading">Writing the Key Features</p> 
+        <p>The next step is to write about the key features, which are the arguments you will present in your essay. It is advisable to dedicate one paragraph to each argument and support it with evidence and examples.</p> 
+        <p style="font-weight: bold;">What to include in each body paragraph?</p> 
+        <ul>
+            <li>> A clear topic sentence that presents the argument.</li>
+            <li>> Supporting evidence that explains and supports the argument.</li>
+            <li>> Examples that illustrate the argument.</li>
+            <li>> A concluding sentence that links back to the thesis statement.</li>
+        </ul>
+        <p>The easiest way to achieve this is to use the PEEL method when structuring your paragraphs.</p> 
+        <p class="mini-heading">What is a PEEL Paragraph?</p> 
+        <ul style="font-weight: bold;">
+            <li>Step 1: Identify your Point.</li>
+            <li>Step 2: Incorporate Your Example</li>
+            <li>Step 3: Explain How your Example Supports Your Point</li>
+            <li>Step 4: Finish of with Your Link</li>
+        </ul> 
+        <a class="mini-heading" href="https://artofsmart.com.au/english/peel-paragraph/">Learn More About PEEL:</a>
+        <p class="mini-heading">Example Body Paragraph:</p>
+        <p>One benefit of personal responsibility is that individuals are more likely to take their health seriously. When people are responsible for their own health, they are more likely to exercise regularly, eat a healthy diet, and get enough sleep. For example, a study conducted by the American Heart Association found that people who take personal responsibility for their health have a lower risk of heart disease. In contrast, people who rely on government programs to promote healthy lifestyle choices may not take their health as seriously.</p>  
+        <p class="mini-heading">Writing the conclusion</p>
+        <p>The purpose of a conclusion is to summarize your arguments and restate your position on the topic.</p>
+        <ul>
+            <li>> Summarize your key arguments.</li>
+            <li>> Restate your position on the topic.</li>
+            <li>> Provide a final thought or call to action.</li>
+        </ul>
+        <p class="mini-heading">Example Conclusion</p>  
+        <p>In conclusion, individuals should take responsibility for their own health. Personal responsibility leads to a healthier lifestyle and a lower risk of disease. While governments can play a role in promoting healthy lifestyle choices, they should not be solely responsible for individuals' health. By taking personal responsibility and making healthy choices, individuals can improve their quality of life and reduce their risk of illness.</p>
         <!-- Footer -->
     </div>
 </body>
