--- a/assets/email.html
+++ b/assets/email.html
@@ -154,7 +154,7 @@
         } 
 
         .footer {
-            background-color: rgb(221, 114, 5);
+            background-color: rgb(241, 179, 117);
             color: white;
             padding: 20px;
             border-radius: 0;
@@ -210,7 +210,8 @@
                 border-radius: 10px;
                 padding: 10px;
                 justify-content: center;
-                flex-wrap: nowrap;
+                flex-wrap: nowrap; 
+                background-color: rgb(227 147 65);
             }
 
             .footer a {
